<resources>
    <string name="app_name">Przyjazne Słowa Menedżer</string>
    <string name="any">any</string>
    <string name="mode">Tryb:</string>
    <string name="save">Zapisz</string>
    <string name="level">Stopniowanie: </string>
    <string name="proportions">Proporcje obraz/tekst: </string>
    <string name="automatic">auto</string>
    <string name="therapist">terapeuty</string>
    <string name="displayCount">Ilosc wyswietlanych obrazków: </string>
    <string name="responseTime">Czas na odpowiedź użytkownika: </string>
    <string name="automaticRepeats">Ilość poprawnych wskazań dla trybu automatycznego: </string>
    <string name="action_settings">Ustawienia</string>
    <string name="title_activity_general_settings">Ustawienia ogólne</string>
    <string name="hintType">Typ podpowiedzi:</string>
    <string-array name="hint_array">
        <item>brak</item>
        <item>wygaszanie</item>
        <item>pogrubienie</item>
    </string-array>
    <string-array name="level_array">
        <item>poziom1</item>
        <item>poziom2</item>
        <item>poziom3</item>
    </string-array>
    <string-array name="display_array">
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>6</item>
    </string-array>
    <string-array name="proportions_array">
        <item>1:0</item>
        <item>2:1</item>
        <item>1:1</item>
        <item>1:2</item>
        <item>0:1</item>
    </string-array>
    <string name="title_activity_resources">Edytuj zasoby</string>
    <string name="title_activity_add_category">Dodaj kategorię</string>
    <string name="add_category">Dodaj kategorię</string>
    <string name="add_audio">Dodaj audio</string>
    <string name="name">Nazwa</string>
    <string name="status">Stan</string>
    <string-array name="status_array">
        <!--<item>nauczone</item>-->
        <!--<item>uczone</item>-->
        <item>do nauki</item>
        <item>pominiete</item>
    </string-array>
    <string name="title_activity_add_child">Dodaj obraz</string>
    <string name="add_child">Dodaj obraz</string>
    <string name="add_image">Dodaj grafikę</string>
    <string name="set">Zbiór</string>
    <string-array name="set_array">
        <item>uczacy</item>
        <item>generalizacji</item>
        <item>brak</item>
    </string-array>
    <string name="title_activity_edit_child">Edytuj obraz</string>
    <string name="edit_child">Edytuj obraz</string>
    <string name="title_activity_edit_category">Edytuj kategorię</string>
    <string name="edit_category">Edytuj kategorię</string>
    <string name="ustawienia">Ustawienia</string>
    <string name="title_activity_about">O aplikacji</string>

    <string name="hello_world">Hello world!</string>
    <string name="about">About</string>
</resources>
