<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="#d8d2bc"
    tools:context="com.example.klaudia.configapp.AddChild">

    <TextView android:text="@string/add_child" android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="15dp" />
    <TableRow
        android:paddingBottom="10dp"
        android:paddingLeft="12dp">
        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/imagePath"
            android:background="#fffeee"
            android:width="200dp" />
        <Button
            android:id="@+id/addImageBtn"
            android:text="@string/add_image"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_marginLeft="10dp" />
    </TableRow>
    <TableRow
        android:paddingBottom="10dp"
        android:paddingLeft="12dp">
        <TextView android:text="@string/set"
            android:layout_column="0"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <Spinner
            android:id="@+id/setSpinner"
            android:layout_column="1"
            android:layout_width="fill_parent"
            android:background="#fffeee"/>
    </TableRow>
    <TableRow>
        <Button android:id="@+id/saveBtn"
            android:text="@string/save"/>
    </TableRow>
</TableLayout>
